@@ -47,6 +47,9 @@ Current Version: RGFW 1.6-dev
 - add RGFW_window_isFullscreen
 - add refreshRate to RGFW_monitor_scale
 - limit directX support to RGFW_window_createDXSwapChain, most of it should/can be handled by the user
+- Add refreshRate to RGFW_monitor
+- do not close the window until the user closes it
+- add `RGFW_window_focus` and `RGFW_window_raise`
 
 Release:    RGFW 1.5 (Jan 14, 2024)
 -----------------------------------------------
@@ -152,7 +155,6 @@ new examples:
 - Add custom backend example
 - Add gamepad example
 - Add no standard library example 
-- Add refreshRate to RGFW_monitor
 
 Current Release:    RGFW 1.06 (Aug 14, 2024)
 -----------------------------------------------
